# neuromeka-clients

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  setup.py
Apps/: moby_manual.ipynb
Apps/.ipynb_checkpoints/: moby_manual-checkpoint.ipynb
examples/: example_eye.py  example_indyclient3.py  example_moby.py
neuromeka/: __init__.py  ecat.py  moby.py  motor.py
neuromeka/proto/: EtherCATCommgRPCServer.proto  EtherCATCommgRPCServer_pb2.py  EtherCATCommgRPCServer_pb2_grpc.py  EyeTask.proto  EyeTask_pb2_grpc.py  MobygRPCServer.proto  MobygRPCServer_pb2.py  MobygRPCServer_pb2_grpc.py  MotorControlgRPCServer_pb2_grpc.py  control_msgs_pb2.py  control_pb2_grpc.py  grpc_wrapper.py
neuromeka_clients.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/IndyClient3Cpp/: CMakeLists.txt  main.cpp
src/IndyClient3Cpp/proto/: IndyClient3.cpp  IndyClient3.h  control.grpc.pb.cc  control.grpc.pb.h  control.pb.cc  control.pb.h  control_msgs.grpc.pb.cc  control_msgs.grpc.pb.h  control_msgs.pb.cc  control_msgs.pb.h  shared_msgs.grpc.pb.cc  shared_msgs.grpc.pb.h  shared_msgs.pb.cc  shared_msgs.pb.h
src/MobyClientCpp/: CMakeLists.txt  main.cpp
src/MobyClientCpp/proto/: EcatClient.cpp  EcatClient.h  EtherCATCommgRPCServer.grpc.pb.cc  EtherCATCommgRPCServer.grpc.pb.h  EtherCATCommgRPCServer.pb.cc  EtherCATCommgRPCServer.pb.h  MobyClient.cpp  MobyClient.h  MobygRPCServer.grpc.pb.cc  MobygRPCServer.grpc.pb.h  MobygRPCServer.pb.cc  MobygRPCServer.pb.h
